--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "^18",
