--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/tailwindcss": "^3.1.0",
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss-pseudo-elements": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
