--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/tailwindcss": "^3.1.0",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "^18",
@@ -18,6 +19,7 @@
     "tailwindcss-pseudo-elements": "^2.0.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
